@@ -5,3 +5,6 @@ This version of the program should be a daemon repeatedly checking (after some d
 2012-04-07
 Everything has been implemented in parser, even disambiguation of rare things like several like-coloured bishops, and such.
 Also reading options from .ini has been implemented.
+
+2012-05-06
+Added crosstable
